# enterprise-devex-orchestrator

./: .env.example  .gitignore  AGENTS.md  QUICKSTART.md  README.md  intent.md  mcp.json  pyproject.toml  standards.yaml
.github/workflows/: ci.yml  contract-review-deploy.yml  contract-review-validate.yml  validate.yml
agent365/: intent.md
agent365/.github/: dependabot.yml
agent365/.github/workflows/: codeql.yml  deploy.yml  validate.yml
agent365/docs/: alerting-runbook.md  cost-estimate.md  dashboard-queries.md  demo-script.md  deployment.md  governance-report.md  improvement-suggestions.md  plan.md  rai-notes.md  scorecard.md  security.md  standards.md  waf-report.md
agent365/frontend/: Dockerfile  index.html  package.json
agent365/frontend/src/: App.tsx
agent365/infra/bicep/: bicepconfig.json  main.bicep
agent365/infra/modules/: action-group.bicep  (+1 more)
agent365/tests/: __init__.py  conftest.py  requirements-test.txt  test_api.py  test_config.py  test_health.py  test_security.py  test_storage.py
contract-review/tests/: conftest.py  test_api.py  test_health.py  test_security.py  test_storage.py
docs/: architecture.md  demo-script.md  deployment.md  rai-notes.md  scorecard.md  security.md
examples/: README.md  intent.md  intent.v2.md
infra/bicep/: main.bicep
my-intent/: intent.md
src/: __init__.py
src/orchestrator/: __init__.py  agent.py  config.py  intent_file.py  intent_schema.py  llm_client.py  logging.py  main.py  state.py  versioning.py
tests/: test_deploy_orchestrator.py  test_enterprise_features.py  test_generators.py  test_governance_validator.py  test_intent_parser.py  test_intent_versioning.py  test_new_features.py  test_planning.py  test_prompt_generator.py  test_skills_registry.py  test_standards.py  test_state.py  test_subagent_dispatcher.py  test_superpowers.py  test_waf.py
voice-agent-output/docs/: alerting-runbook.md  cost-estimate.md  dashboard-queries.md  demo-script.md  deployment.md  governance-report.md  improvement-suggestions.md  plan.md  rai-notes.md  security.md  standards.md  waf-report.md
voice-agent-output/tests/: conftest.py  test_api.py  test_config.py  test_health.py  test_security.py
(+84 files in other folders)
